# FlaskProject

./: Online lessons.yaml  README.md  alembic.ini  index.html  main.py  pyproject.toml  tables.sql  test_main.py
alembic/: env.py
alembic/versions/: 16bd9575b110_initial.py  6cd6b39ee6b0_initial.py  9cc2cd66b83d_initial.py  ed7de1b620cc_initial.py
frontend/: 03_11_Web_Animations.html  Home.html  Login.html
models/: model.py
sessions/: session.py  test.py
