[tool.poetry]
name = "flaskproject"
version = "0.1.0"
description = "University flask project"
authors = ["Unfectum <roma509000@gmail.com>"]

[tool.poetry.dependencies]
python = "3.6.7"
Flask = "^1.1.2"
waitress = "^1.4.4"
SQLAlchemy = "^1.3.20"
alembic = "^1.4.3"
Flask-Bcrypt = "^0.7.1"
Flask-RESTful = "^0.3.8"
Flask-SQLAlchemy = "^2.4.4"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
